--- a/Pickup_Comps_Inner/React/my-app/src/Headers.css
+++ b/Pickup_Comps_Inner/React/my-app/src/Headers.css
@@ -17,6 +17,7 @@ h3{
     padding: 0.25rem 9999rem;
     background: rgba(56, 56, 142, 0.635);
     margin: 0 -9999rem;
+    color:#ff4500;
 }
 
 p{
