--- a/Pickup_Comps_Inner/React/my-app/src/Header_Components/Headers.css
+++ b/Pickup_Comps_Inner/React/my-app/src/Header_Components/Headers.css
@@ -12,9 +12,8 @@ h2{
 }
 
 h3{
-    width: 1460px;
+    width: 100%;
     height: 25px;
-    margin-left: -60px;
     background: rgba(56, 56, 142, 0.635);
     color:#ff4500;
 }
@@ -65,9 +64,8 @@ input[type="range"] {
 }
 
   .wrap {
-    width: 1440px;
+    width: 100%;
     height: 60px;
-    margin-left: -40px;
     background: rgba(7, 7, 99, 0.635);
   }
 
