--- a/Pickup_Comps_Inner/React/my-app/src/Nav+Footer_Components/Nav+Footer.css
+++ b/Pickup_Comps_Inner/React/my-app/src/Nav+Footer_Components/Nav+Footer.css
@@ -65,6 +65,7 @@ a{
   justify-content: center;
   width: 100%;
   background: rgba(56, 56, 142, 0.635);
+  left: 0;
 }
 .navbar-h1{
   text-align: center;
